Added a couple of tests for InterceptionDbContext

--- a/test/EF.Interception.Tests/EF.Interception.Tests.csproj
+++ b/test/EF.Interception.Tests/EF.Interception.Tests.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestObjects\MockInterceptor.cs" />
     <Compile Include="TestObjects\Book.cs" />
     <Compile Include="TestObjects\IEntity.cs" />
     <Compile Include="TestObjects\InMemoryDbContext.cs" />
