--- a/test/EF.Interception.Tests/EF.Interception.Tests.csproj
+++ b/test/EF.Interception.Tests/EF.Interception.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="TestObjects\AuditInterceptor.cs" />
     <Compile Include="TestObjects\IAuditedEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestObjects\SoftDeleteInterceptor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
